--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
