--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=sdocamnorte2025*
 DB_NAME=data_authority
 PORT=3000
 REACT_APP_API_URL=https://your-backend-url.com
